# IoT-Device-Communication

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Application/Multicast_UDP/: client1.cpp  client2.cpp  server.cpp
Application/Unicast_TCP/: client.cpp
inc/channel/: channel.hpp  clientChannel.hpp  serverChannel.hpp
inc/socket/: TCPSocket.hpp  UDPSocket.hpp  socket.hpp
src/channel/: channel.cpp  channel.hpp  clientChannel.cpp  client_channel.hpp  serverChannel.cpp  server_channel.hpp
src/socket/: TCPSocket.cpp
src/sockets/: TCP_socket.cpp  TCP_socket.hpp  UDP_socket.cpp  UDP_socket.hpp  sockets.hpp
test/: TCP_Client.cpp  TCP_Server.cpp  UDP_Client.cpp  UDP_Server.cpp  client  multicast_client.cpp  multicast_client2.cpp  multicast_server.cpp  server  server.cpp
testing/TCP_testing/: TCPSocket.cpp  TCPSocket.hpp  client  client_test.cpp  server  server_test.cpp  socket.hpp
testing/UDP_testing/: UDPSocket.cpp  UDPSocket.hpp  client  client.cpp  server  server.cpp
yocto_recipes/TCP_Client_qemu/: tcpclientqemu_1.0.bb
yocto_recipes/TCP_Client_qemu/files/: CMakeLists.txt
yocto_recipes/TCP_Client_qemu/files/Application/Unicast_TCP/: client.cpp
yocto_recipes/TCP_Client_qemu/files/src/channel/: client_channel.cpp
yocto_recipes/TCP_server_RPI/: tcprpiserver_1.0.bb
yocto_recipes/TCP_server_RPI/files/: CMakeLists.txt
yocto_recipes/TCP_server_RPI/files/Application/Unicast_TCP/: server.cpp
yocto_recipes/TCP_server_RPI/files/src/HW_modules/: CDht11.cpp  CDht11.hpp  CLed.cpp  CRaspberryPi.hpp
yocto_recipes/TCP_server_RPI/files/src/channel/: channel.hpp  server_channel.cpp
yocto_recipes/UDP_QEMU/: udpqemu_1.0.bb
yocto_recipes/UDP_QEMU/files/: CMakeLists.txt
yocto_recipes/UDP_QEMU/files/Application/Multicast_UDP/: client1.cpp
yocto_recipes/UDP_QEMU/files/src/channel/: client_channel.cpp
yocto_recipes/UDP_QEMU/files/src/sockets/: UDP_socket.cpp  UDP_socket.hpp
yocto_recipes/UDP_RPI/: udprpiserver_1.0.bb
yocto_recipes/UDP_RPI/files/: CMakeLists.txt
yocto_recipes/UDP_RPI/files/Application/Multicast_UDP/: server.cpp
yocto_recipes/UDP_RPI/files/src/channel/: server_channel.cpp  server_channel.hpp
